--- a/frontend/src/containers/pages/Home/components/TarjetaDestacadaContainer/styles.module.css
+++ b/frontend/src/containers/pages/Home/components/TarjetaDestacadaContainer/styles.module.css
@@ -27,7 +27,8 @@
   grid-template-columns: repeat(5, 1fr);
   gap: 1rem;
   margin-top: 2rem;
-  padding: 0 1rem;
+  padding: 0px;
+
 }
 
 .recentImageCard {
@@ -37,6 +38,7 @@
   overflow: hidden;
   transition: all 0.3s ease;
   cursor: pointer;
+  margin: 10px;
 }
 
 .recentImageCard:hover {
@@ -68,7 +70,6 @@
   right: 8px;
   background: rgba(0, 0, 0, 0.7);
   color: white;
-  padding: 4px 8px;
   border-radius: 6px;
   font-size: 0.75rem;
   font-weight: 500;
